Discover: Fix add server button alignment

--- a/weblate_web/static/style-rtl.css
+++ b/weblate_web/static/style-rtl.css
@@ -1372,7 +1372,7 @@ body.page section.content.no-mar {
 }
 .discover-add {
   font-size: 18px;
-  padding: 28px 5px;
+  padding: 28px 45px;
 }
 .article .content {
   border-radius: 30px;
